--- a/Crypto_Clustering - Copy.ipynb
+++ b/Crypto_Clustering - Copy.ipynb
@@ -1424,9 +1424,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>PC3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>coin_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bitcoin</th>\n",
+       "      <td>-0.138364</td>\n",
+       "      <td>-1.020224</td>\n",
+       "      <td>0.623382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ethereum</th>\n",
+       "      <td>-0.059867</td>\n",
+       "      <td>-0.623672</td>\n",
+       "      <td>1.092763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tether</th>\n",
+       "      <td>-0.625598</td>\n",
+       "      <td>0.084966</td>\n",
+       "      <td>-0.648152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ripple</th>\n",
+       "      <td>-0.659851</td>\n",
+       "      <td>0.122624</td>\n",
+       "      <td>-0.483037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bitcoin-cash</th>\n",
+       "      <td>-0.241455</td>\n",
+       "      <td>-2.355599</td>\n",
+       "      <td>1.918832</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   PC1       PC2       PC3\n",
+       "coin_id                                   \n",
+       "bitcoin      -0.138364 -1.020224  0.623382\n",
+       "ethereum     -0.059867 -0.623672  1.092763\n",
+       "tether       -0.625598  0.084966 -0.648152\n",
+       "ripple       -0.659851  0.122624 -0.483037\n",
+       "bitcoin-cash -0.241455 -2.355599  1.918832"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a new DataFrame with the PCA data.\n",
     "df_market_pca = pd.DataFrame(market_pca_data, columns=[\"PC1\", \"PC2\", \"PC3\"])\n",
@@ -1435,9 +1517,10 @@
     "df_market_pca[\"coin_id\"] = df_market_data.index\n",
     "\n",
     "# Set the coinid column as index\n",
-    "df_market_pca = df_market_pca.set_index(\"Ticker\")\n",
+    "df_market_pca = df_market_pca.set_index(\"coin_id\")\n",
     "\n",
-    "# Display sample data\n"
+    "# Display sample data\n",
+    "df_market_pca.head()"
    ]
   },
   {
